package `in`.financeministry.app.core.model

val transactionCategories = listOf("Other", "Food", "Travel", "Shopping", "Bills", "Flat expenses", "Health", "Education", "Entertainment", "Cash", "Income", "Investment")

